Assignment 2:NDNrg-Topology/NDNrg-Image-Node2/minindn2-instal-sh-i.txt
bertopeng17-2@NDN-Node2-UTI:~$ cd mini-ndn
bertopeng17-2@NDN-Node2-UTI:~/mini-ndn$ ./install.sh -i
[sudo] password for bertopeng17-2: 
Reading package lists... Done
Building dependency tree       
Reading state information... Done
libigraph0-dev is already the newest version (0.7.1-2.1+deb9u1build0.18.04.1).
tshark is already the newest version (2.6.10-1~ubuntu18.04.0).
The following packages were automatically installed and are no longer required:
  efibootmgr gyp libegl1-mesa libfwup1 libjs-async libjs-inherits libjs-node-uuid libllvm9 libuv1-dev libwayland-egl1-mesa node-abbrev node-ansi node-ansi-color-table node-archy node-async node-balanced-match
  node-block-stream node-brace-expansion node-combined-stream node-concat-map node-cookie-jar node-delayed-stream node-forever-agent node-form-data node-fs.realpath node-fstream node-fstream-ignore
  node-github-url-from-git node-glob node-graceful-fs node-hosted-git-info node-inflight node-inherits node-ini node-isexe node-json-stringify-safe node-lockfile node-lru-cache node-mime node-minimatch node-mkdirp
  node-mute-stream node-node-uuid node-nopt node-npmlog node-once node-osenv node-path-is-absolute node-pseudomap node-qs node-read node-request node-retry node-rimraf node-semver node-sha node-slide
  node-spdx-correct node-spdx-expression-parse node-spdx-license-ids node-tar node-tunnel-agent node-underscore node-validate-npm-package-license node-which node-wrappy node-yallist
Use 'sudo apt autoremove' to remove them.
0 upgraded, 0 newly installed, 0 to remove and 0 not upgraded.
DEPRECATION: Python 2.7 reached the end of its life on January 1st, 2020. Please upgrade your Python as Python 2.7 is no longer maintained. pip 21.0 will drop support for Python 2.7 in January 2021. More details about Python 2 support in pip can be found at https://pip.pypa.io/en/latest/development/release-process/#python-2-support pip 21.0 will remove support for this functionality.
WARNING: The directory '/home/bertopeng17-2/.cache/pip' or its parent directory is not owned or is not writable by the current user. The cache has been disabled. Check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.
Collecting python-igraph
  Downloading python-igraph-0.9.6.tar.gz (3.6 MB)
     |████████████████████████████████| 3.6 MB 379 kB/s 
    ERROR: Command errored out with exit status 1:
     command: /usr/bin/python -c 'import sys, setuptools, tokenize; sys.argv[0] = '"'"'/tmp/pip-install-06WA_s/python-igraph/setup.py'"'"'; __file__='"'"'/tmp/pip-install-06WA_s/python-igraph/setup.py'"'"';f=getattr(tokenize, '"'"'open'"'"', open)(__file__);code=f.read().replace('"'"'\r\n'"'"', '"'"'\n'"'"');f.close();exec(compile(code, __file__, '"'"'exec'"'"'))' egg_info --egg-base /tmp/pip-pip-egg-info-pWDruW
         cwd: /tmp/pip-install-06WA_s/python-igraph/
    Complete output (6 lines):
    Traceback (most recent call last):
      File "<string>", line 1, in <module>
      File "/tmp/pip-install-06WA_s/python-igraph/setup.py", line 465
        raise RuntimeError(f"Failed to clean {folder} with git")
                                                              ^
    SyntaxError: invalid syntax
    ----------------------------------------
ERROR: Command errored out with exit status 1: python setup.py egg_info Check the logs for full command output.
Hit:1 http://ppa.launchpad.net/named-data/ppa/ubuntu bionic InRelease                                            
Hit:2 http://us.archive.ubuntu.com/ubuntu bionic InRelease                                                       
Get:3 http://us.archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]           
Get:4 http://us.archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]                    
Get:5 http://us.archive.ubuntu.com/ubuntu bionic-updates/main i386 Packages [1,345 kB]
Get:6 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]
Get:7 http://us.archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [2,218 kB]                                                                                                                                 
Get:8 http://security.ubuntu.com/ubuntu bionic-security/main amd64 DEP-11 Metadata [51.4 kB]                                                                                                                            
Get:9 http://us.archive.ubuntu.com/ubuntu bionic-updates/main amd64 DEP-11 Metadata [294 kB]                                                                                                                            
Get:10 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 DEP-11 Metadata [57.9 kB]                                                                                                                       
Get:11 http://us.archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [1,749 kB]                                                                                                                            
Get:12 http://security.ubuntu.com/ubuntu bionic-security/multiverse amd64 DEP-11 Metadata [2,464 B]                                                                                                                     
Get:13 http://us.archive.ubuntu.com/ubuntu bionic-updates/universe i386 Packages [1,575 kB]                                                                                                                             
Get:14 http://us.archive.ubuntu.com/ubuntu bionic-updates/universe amd64 DEP-11 Metadata [294 kB]                                                                                                                       
Get:15 http://us.archive.ubuntu.com/ubuntu bionic-updates/multiverse amd64 DEP-11 Metadata [2,468 B]                                                                                                                    
Get:16 http://us.archive.ubuntu.com/ubuntu bionic-backports/universe amd64 DEP-11 Metadata [9,268 B]                                                                                                                    
Fetched 7,850 kB in 14s (547 kB/s)                                                                                                                                                                                      
Reading package lists... Done
Reading package lists... Done
Building dependency tree       
Reading state information... Done
python-setuptools is already the newest version (39.0.1-2).
python-setuptools set to manually installed.
The following packages were automatically installed and are no longer required:
  efibootmgr gyp libegl1-mesa libfwup1 libjs-async libjs-inherits libjs-node-uuid libllvm9 libuv1-dev libwayland-egl1-mesa node-abbrev node-ansi node-ansi-color-table node-archy node-async node-balanced-match
  node-block-stream node-brace-expansion node-combined-stream node-concat-map node-cookie-jar node-delayed-stream node-forever-agent node-form-data node-fs.realpath node-fstream node-fstream-ignore
  node-github-url-from-git node-glob node-graceful-fs node-hosted-git-info node-inflight node-inherits node-ini node-isexe node-json-stringify-safe node-lockfile node-lru-cache node-mime node-minimatch node-mkdirp
  node-mute-stream node-node-uuid node-nopt node-npmlog node-once node-osenv node-path-is-absolute node-pseudomap node-qs node-read node-request node-retry node-rimraf node-semver node-sha node-slide
  node-spdx-correct node-spdx-expression-parse node-spdx-license-ids node-tar node-tunnel-agent node-underscore node-validate-npm-package-license node-which node-wrappy node-yallist
Use 'sudo apt autoremove' to remove them.
0 upgraded, 0 newly installed, 0 to remove and 0 not upgraded.
cp: cannot stat 'topologies/minindn.testbed.conf': No such file or directory
cp: cannot stat 'topologies/current-testbed.conf': No such file or directory
running develop
running egg_info
creating Mini_NDN.egg-info
writing Mini_NDN.egg-info/PKG-INFO
writing top-level names to Mini_NDN.egg-info/top_level.txt
writing dependency_links to Mini_NDN.egg-info/dependency_links.txt
writing manifest file 'Mini_NDN.egg-info/SOURCES.txt'
reading manifest file 'Mini_NDN.egg-info/SOURCES.txt'
writing manifest file 'Mini_NDN.egg-info/SOURCES.txt'
running build_ext
Creating /usr/local/lib/python2.7/dist-packages/Mini-NDN.egg-link (link to .)
Adding Mini-NDN 0.5.0 to easy-install.pth file

Installed /home/bertopeng17-2/mini-ndn
Processing dependencies for Mini-NDN==0.5.0
Finished processing dependencies for Mini-NDN==0.5.0
['minindn', 'minindn.wifi', 'minindn.apps', 'minindn.helpers']
bertopeng17-2@NDN-Node2-UTI:~/mini-ndn$ 
